// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InboxProgram /> Should render as expected 1`] = `
<div>
  <SAMModal
    contentLabel="Test"
    id="pcq"
    isOpen={true}
    modalClassModifier="modal--inboxprogramlabel-quiz"
  >
    <div>
      <div
        className="inbox-program-logo-align"
      >
        <img
          alt="SAM"
          src="IMAGE_MOCK"
        />
      </div>
      <div
        className="inbox-program-centerpanel"
      >
        <div
          className="inbox-show-label-quiz-list--orange"
        >
          <div />
          <div>
            <button
              className="inboxprogram-button-close"
              onClick={[Function]}
            >
              X
            </button>
          </div>
        </div>
        <SimulationProgram
          assignment="Simulation"
          currIndex={1}
          data={
            Object {
              "allData": Object {
                "length": 1,
              },
            }
          }
          editStatus={true}
          getQuestion={[Function]}
          handleCancel={[Function]}
          isOpen={true}
          nextDisable=""
          nextSerd={[Function]}
          prevSerd={[Function]}
          previousDisable=""
          profileUserId=""
          questionTabIndex={0}
          resetSaveButton={[Function]}
          resetStateData={false}
          sName=""
          saveQuestion={[Function]}
          showWarning={[Function]}
          storeData={[Function]}
          tabIndex={0}
        />
        <div
          className="print-custom-booklabel__buttons"
        >
          <button
            className="inbox-program-print"
            onClick={[Function]}
          >
            Print
          </button>
          <button
            className="inbox-program-cancel"
            onClick={[Function]}
          >
            Cancel
          </button>
          <div
            className="inbox-modal-buttons-firstset"
          >
            <div
              className="inbox-program-pager"
            >
              <div
                className="inbox-program-pager-prev"
              >
                <a
                  className=""
                  href=""
                  onClick={[Function]}
                >
                  &lt;
                </a>
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                 
                2
                 
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                 of 
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                1
              </div>
              <div
                className="inbox-program-pager-prev"
              >
                <a
                  className=""
                  href=""
                  onClick={[Function]}
                >
                  &gt;
                </a>
              </div>
            </div>
          </div>
          <div
            className="inbox-program-save"
          >
            <button
              className="print-math180-modal-button-second-set print-math180-modal-button-save"
              disabled={true}
              onClick={[Function]}
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </SAMModal>
  <SAMModal
    contentLabel="SAM Modal"
    isOpen={false}
    modalClassModifier="modal--savescreen-warning"
  >
    <div
      className="modal--savewrapper-heading"
    >
      Warning 
    </div>
    <div
      className="modal--savewrapper-warning"
    >
      you have unsaved changes.Do you want to leave this screen without saving them?
      <div
        className="read180ngsave-innerpage-button modal-okbtns"
      >
        <SAMButton
          buttonType="button"
          isPrimaryButton={true}
          onClickHandler={[Function]}
        >
          OK
        </SAMButton>
        <SAMButton
          buttonType="button"
          isPrimaryButton={false}
          onClickHandler={[Function]}
        >
           Cancel 
        </SAMButton>
      </div>
    </div>
  </SAMModal>
</div>
`;

exports[`<InboxProgram /> Should render as expected 2`] = `
<div>
  <SAMModal
    contentLabel="Test"
    id="pcq"
    isOpen={true}
    modalClassModifier="modal--inboxprogramlabel-quiz"
  >
    <div>
      <div
        className="inbox-program-logo-align"
      >
        <img
          alt="SAM"
          src="IMAGE_MOCK"
        />
      </div>
      <div
        className="inbox-program-centerpanel"
      >
        <div
          className="inbox-show-label-quiz-list--orange"
        >
          <div />
          <div>
            <button
              className="inboxprogram-button-close"
              onClick={[Function]}
            >
              X
            </button>
          </div>
        </div>
        <SkillsAssestments
          assignment="mSkills Assessment"
          communityId=""
          currIndex={1}
          data={
            Object {
              "allData": Object {
                "length": 1,
              },
            }
          }
          editStatus={true}
          getQuestion={[Function]}
          handleCancel={[Function]}
          isOpen={true}
          nextSerd={[Function]}
          prevSerd={[Function]}
          resetSaveButton={[Function]}
          resetStateData={false}
          sName=""
          saveQuestion={[Function]}
          showWarning={[Function]}
          storeData={[Function]}
          tabIndex={0}
        />
        <div
          className="print-custom-booklabel__buttons"
        >
          <button
            className="inbox-program-print"
            onClick={[Function]}
          >
            Print
          </button>
          <button
            className="inbox-program-cancel"
            onClick={[Function]}
          >
            Cancel
          </button>
          <div
            className="inbox-modal-buttons-firstset"
          >
            <div
              className="inbox-program-pager"
            >
              <div
                className="inbox-program-pager-prev"
              >
                <a
                  href=""
                  onClick={[Function]}
                >
                  &lt;
                </a>
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                 
                2
                 
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                 of 
              </div>
              <div
                className="inbox-program-pager-normal"
              >
                1
              </div>
              <div
                className="inbox-program-pager-prev"
              >
                <a
                  href=""
                  onClick={[Function]}
                >
                  &gt;
                </a>
              </div>
            </div>
          </div>
          <div
            className="inbox-program-save"
          >
            <button
              className="print-math180-modal-button-second-set print-math180-modal-button-save"
              disabled={true}
              onClick={[Function]}
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </SAMModal>
  <SAMModal
    contentLabel="SAM Modal"
    isOpen={false}
    modalClassModifier="modal--savescreen-warning"
  >
    <div
      className="modal--savewrapper-heading"
    >
      Warning 
    </div>
    <div
      className="modal--savewrapper-warning"
    >
      you have unsaved changes.Do you want to leave this screen without saving them?
      <div
        className="read180ngsave-innerpage-button modal-okbtns"
      >
        <SAMButton
          buttonType="button"
          isPrimaryButton={true}
          onClickHandler={[Function]}
        >
          OK
        </SAMButton>
        <SAMButton
          buttonType="button"
          isPrimaryButton={false}
          onClickHandler={[Function]}
        >
           Cancel 
        </SAMButton>
      </div>
    </div>
  </SAMModal>
</div>
`;
